# Vibe

./: .cursorrules  .env.docker.example  .env.example  .env.local.example  .gitignore  Dockerfile  LICENSE  README.md  bot.db  bot.py  config.py  database.py  docker-compose.yml  ocr_service.py  pyproject.toml  requirements.txt  Рекомендуемая схема безопасности mcp.json.md
.github/workflows/: deploy.yml
.trash/: mcp_real_check.txt
docs/: context.md
src/vibe/: __init__.py  bot.py  config.py  database.py  ocr_service.py
src/vibe/infra/: __init__.py  disk_monitor.py  telegram_notify.py
tests/: test_layout.py
